v0.61/docs/v0.61_S0_fix_structured.md
# v0.61 S0 — Structured Repair / Verify Protocol Semantics

## Scope

Structured comparator only. No DC-SoC S0, S1 regression, or final Exp07/08/09 runs were performed.

## Governing Structured Semantics

Standalone Structured must forward over every eligible cluster relationship, exclude the immediate sender when that does not remove another obligation, and must not use a numeric fanout cap.

## Environment

- Active root: `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.61`
- Interpreter: `/Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python`
- Requested historical root: `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60` (not present)

## Runtime Call Path

`run_one.py` / `run_batch.py` select strategy name `cluster` -> `assign_static_clusters()` assigns round-robin cluster membership, one head per cluster, and a bidirectional chain of gateway-head relationships -> `ClusterStrategy()` is constructed with `fanout=None` -> `Simulator.handle_receive()` invokes `select_targets()` -> head/member target lookup occurs in `ClusterStrategy` -> simulator deduplicates the returned list and calls `send_message()` once per target.

## Defined Structural Relationships

- Member -> own cluster head: directional upward obligation.
- Cluster head -> active members of its cluster: directional downward obligations.
- Cluster head <-> adjacent cluster heads in the gateway chain: bidirectional gateway relationships.
- Physical `Node.neighbors` are not standalone Structured forwarding relationships.

## Eligible Structural Target Rule

- Head: all active own-cluster members other than self plus all active gateway heads, deduplicated, minus the immediate sender.
- Member: active own-cluster head, unless it is the immediate sender.

## Fanout / Numeric-Cap Audit

Standalone construction in both runners is `ClusterStrategy()` and therefore `fanout=None`. In that branch `_select_head_targets()` returns all members plus gateways. The bounded code in `ClusterStrategy` is reached only when canonical `AHBNStrategy` mutates its private `_cluster.fanout`; it is AHBN-only, not the standalone Structured comparator. Gossip sampling, DC-SoC limits, AHBN controller bounds, and `HybridFixedStrategy` caps are unrelated comparator-specific paths.

Target-count selection probes reached the real `ClusterStrategy.select_targets()` implementation and passed for 1 through 7 eligible obligations. No truncation at 3 or 6 was observed.

## Sender-Exclusion Audit

Finding before repair: `ClusterStrategy` accepted `exclude_target_id`, but `Simulator.handle_receive()` passed the sender only to AHBN and Gossip. Standalone Structured therefore could immediately return a newly received message to a member or gateway sender.

Smallest repair: import `ClusterStrategy` in `ahbn/simulator.py` and add a comparator-specific dispatch branch that passes `exclude_target_id=src_id`. No target-selection algorithm changed.

## Exp07 Isolation Check

Exp07 config lists only Gossip and AHBN. Its fanout sweep is passed to Gossip; AHBN is invoked once with `fanout=None`. Structured does not participate and receives no sweep value.

## Exp08 Check

Exp08 invokes `run_single()` without a generic fanout argument. Structured constructs `ClusterStrategy()` with no budget. The explicit `dcsoc.fanout: 3` and `ahbn.default_fanout: 3` are scoped to those strategies.

## Exp09 Check

Exp09 explicitly invokes every strategy with `fanout=None`. Structured remains uncapped across the ER density sweep. The explicit `dcsoc.fanout: 3` and `ahbn.default_fanout: 3` are scoped to those strategies.

## v0.60 Historical Comparison

Unresolved: the exact requested directory `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60` does not exist. Git history contains `v0.6/...` paths and the v0.61 baseline commit, but the stop rule was triggered before a substitute historical comparison could be completed. No claim of v0.60 equivalence is made.

## Deterministic Structural-Target Probes

Direct real-path selection results before the event-scheduling failure:

| Eligible | Selected | Result |
|---:|---:|---|
| 1 | 1 | PASS |
| 2 | 2 | PASS |
| 3 | 3 | PASS |
| 4 | 4 | PASS |
| 5 | 5 | PASS |
| 6 | 6 | PASS |
| 7 | 7 | PASS |

The probe also defines physical-only nodes 100 and 101 outside cluster relationships.

## Event Scheduling vs Structural Forwarding

Unresolved. The probe attempted to call `Simulator.handle_receive()` directly, but the message had not first been registered with `MetricsCollector`, producing `KeyError: 'structured-probe'` before selection/scheduling. Per the prescribed failure/stop rule, no iterative probe repair was made.

## Findings Before Repair

1. No standalone Structured numeric cap was found.
2. Immediate-sender exclusion was implemented in the strategy but omitted from simulator dispatch.
3. The required v0.60 directory is absent.

## Repairs Performed

- `ahbn/simulator.py`: restore immediate-sender exclusion for standalone Structured.
- `scripts/validate_s0_structured.py`: add deterministic target-count and event-scheduling probe (event-scheduling portion currently fails due to missing metrics registration).

## Files Modified

- Source: `ahbn/simulator.py`
- Test/probe: `scripts/validate_s0_structured.py`
- Configuration: NONE
- Documentation: `docs/v0.61_S0_fix_structured.md`

## Git Diff Summary

At the stop point: one tracked source file modified and one untracked probe file added (plus this documentation file after the captured status).

## Structured Semantic Checklist

- STRUCT-01 PASS
- STRUCT-02 PASS
- STRUCT-03 PASS
- STRUCT-04 PASS
- STRUCT-05 PASS
- STRUCT-06 PASS
- STRUCT-07 PASS
- STRUCT-08 PASS
- STRUCT-09 PASS
- STRUCT-10 REPAIRED, VERIFICATION INCOMPLETE
- STRUCT-11 REPAIRED, VERIFICATION INCOMPLETE
- STRUCT-12 PASS
- STRUCT-13 PASS
- STRUCT-14 PASS
- STRUCT-15 PASS by static path audit
- STRUCT-16 PASS by static path audit
- STRUCT-17 PASS by static path audit
- STRUCT-18 PASS by static configuration/path audit
- STRUCT-19 FAIL / UNRESOLVED (probe setup failure before scheduling)

## Final S0 Structured Gate

`S0 STRUCTURED: FAIL — USER REVIEW REQUIRED`

No overall PASS is declared because event scheduling verification and the requested exact v0.60 comparison remain unresolved.

## Commands Executed

Commands were run from the active project or discovery workspace as applicable:

1. Read the supplied protocol with `sed`; listed workspace files and searched for `AGENTS.md`.
2. Read the remaining protocol; listed v0.61 files and checked for `AGENTS.md`.
3. Inspected `cluster.py`, strategy base, `run_one.py`, and git status.
4. Audited fanout/sample/select call sites with `rg`; inspected simulator, AHBN strategy, topology, cluster manager, and batch runner.
5. Inspected simulator dispatch, Exp07/08/09 runner/config paths, and attempted filesystem v0.60 diffs.
6. Inspected imports, send path, complete Exp08/09 runner paths, candidate historical directories, and git history.
7. Patched simulator sender dispatch.
8. Inspected node/message receive APIs and historical git objects.
9. Inspected receive logic and v0.61 baseline Structured implementation.
10. Audited repository history/tree paths for v0.60/v0.6.
11. Added `scripts/validate_s0_structured.py`.
12. Ran the probe as a file (import-path failure).
13. Ran the probe as a module (target counts passed; scheduling setup failed).
14. Captured git diff and status.

## Terminal Output

### Requested historical directory

```text
find: /Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60: No such file or directory
diff: /Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60/ahbn/strategies/cluster.py: No such file or directory
```

### First probe invocation

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python scripts/validate_s0_structured.py
Traceback (most recent call last):
  File ".../scripts/validate_s0_structured.py", line 3, in <module>
    from ahbn.cluster import ClusterManager
ModuleNotFoundError: No module named 'ahbn'
```

### Module-form probe invocation

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python -m scripts.validate_s0_structured
S0 Structured deterministic target-count probes
eligible=1 selected=1 targets=[2] PASS
eligible=2 selected=2 targets=[2, 3] PASS
eligible=3 selected=3 targets=[2, 3, 4] PASS
eligible=4 selected=4 targets=[2, 3, 4, 5] PASS
eligible=5 selected=5 targets=[2, 3, 4, 5, 6] PASS
eligible=6 selected=6 targets=[2, 3, 4, 5, 6, 7] PASS
eligible=7 selected=7 targets=[2, 3, 4, 5, 6, 7, 8] PASS
Traceback (most recent call last):
  ...
  File ".../ahbn/metrics.py", line 44, in record_first_seen
    rec = self.messages[message_id]
KeyError: 'structured-probe'
```

### Source diff at stop point

```diff
+from ahbn.strategies.cluster import ClusterStrategy

+        elif isinstance(self.strategy, ClusterStrategy):
+            targets = self.strategy.select_targets(
+                node,
+                message,
+                self,
+                exclude_target_id=src_id,
+            )
```
