v0.62/docs/v0.61_S0_fix_structured.md
# v0.61 S0 — Structured Repair / Verify Protocol Semantics

## Scope

Structured comparator only. No DC-SoC S0, S1 regression, or final Exp07/08/09 runs were performed.

## Governing Structured Semantics

Standalone Structured must forward over every eligible cluster relationship, exclude the immediate sender when that does not remove another obligation, and must not use a numeric fanout cap.

## Environment

- Active root: `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.61`
- Interpreter: `/Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python`
- Requested historical root: `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60` (not present)

## Runtime Call Path

`run_one.py` / `run_batch.py` select strategy name `cluster` -> `assign_static_clusters()` assigns round-robin cluster membership, one head per cluster, and a bidirectional chain of gateway-head relationships -> `ClusterStrategy()` is constructed with `fanout=None` -> `Simulator.handle_receive()` invokes `select_targets()` -> head/member target lookup occurs in `ClusterStrategy` -> simulator deduplicates the returned list and calls `send_message()` once per target.

## Defined Structural Relationships

- Member -> own cluster head: directional upward obligation.
- Cluster head -> active members of its cluster: directional downward obligations.
- Cluster head <-> adjacent cluster heads in the gateway chain: bidirectional gateway relationships.
- Physical `Node.neighbors` are not standalone Structured forwarding relationships.

## Eligible Structural Target Rule

- Head: all active own-cluster members other than self plus all active gateway heads, deduplicated, minus the immediate sender.
- Member: active own-cluster head, unless it is the immediate sender.

## Fanout / Numeric-Cap Audit

Standalone construction in both runners is `ClusterStrategy()` and therefore `fanout=None`. In that branch `_select_head_targets()` returns all members plus gateways. The bounded code in `ClusterStrategy` is reached only when canonical `AHBNStrategy` mutates its private `_cluster.fanout`; it is AHBN-only, not the standalone Structured comparator. Gossip sampling, DC-SoC limits, AHBN controller bounds, and `HybridFixedStrategy` caps are unrelated comparator-specific paths.

Target-count selection probes reached the real `ClusterStrategy.select_targets()` implementation and passed for 1 through 7 eligible obligations. No truncation at 3 or 6 was observed.

## Sender-Exclusion Audit

Finding before repair: `ClusterStrategy` accepted `exclude_target_id`, but `Simulator.handle_receive()` passed the sender only to AHBN and Gossip. Standalone Structured therefore could immediately return a newly received message to a member or gateway sender.

Smallest repair: import `ClusterStrategy` in `ahbn/simulator.py` and add a comparator-specific dispatch branch that passes `exclude_target_id=src_id`. No target-selection algorithm changed.

## Exp07 Isolation Check

Exp07 config lists only Gossip and AHBN. Its fanout sweep is passed to Gossip; AHBN is invoked once with `fanout=None`. Structured does not participate and receives no sweep value.

## Exp08 Check

Exp08 invokes `run_single()` without a generic fanout argument. Structured constructs `ClusterStrategy()` with no budget. The explicit `dcsoc.fanout: 3` and `ahbn.default_fanout: 3` are scoped to those strategies.

## Exp09 Check

Exp09 explicitly invokes every strategy with `fanout=None`. Structured remains uncapped across the ER density sweep. The explicit `dcsoc.fanout: 3` and `ahbn.default_fanout: 3` are scoped to those strategies.

## v0.60 Historical Comparison

Unresolved: the exact requested directory `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60` does not exist. Git history contains `v0.6/...` paths and the v0.61 baseline commit, but the stop rule was triggered before a substitute historical comparison could be completed. No claim of v0.60 equivalence is made.

## Deterministic Structural-Target Probes

Direct real-path selection results before the event-scheduling failure:

| Eligible | Selected | Result |
|---:|---:|---|
| 1 | 1 | PASS |
| 2 | 2 | PASS |
| 3 | 3 | PASS |
| 4 | 4 | PASS |
| 5 | 5 | PASS |
| 6 | 6 | PASS |
| 7 | 7 | PASS |

The probe also defines physical-only nodes 100 and 101 outside cluster relationships.

## Event Scheduling vs Structural Forwarding

Unresolved. The probe attempted to call `Simulator.handle_receive()` directly, but the message had not first been registered with `MetricsCollector`, producing `KeyError: 'structured-probe'` before selection/scheduling. Per the prescribed failure/stop rule, no iterative probe repair was made.

## Findings Before Repair

1. No standalone Structured numeric cap was found.
2. Immediate-sender exclusion was implemented in the strategy but omitted from simulator dispatch.
3. The required v0.60 directory is absent.

## Repairs Performed

- `ahbn/simulator.py`: restore immediate-sender exclusion for standalone Structured.
- `scripts/validate_s0_structured.py`: add deterministic target-count and event-scheduling probe (event-scheduling portion currently fails due to missing metrics registration).

## Files Modified

- Source: `ahbn/simulator.py`
- Test/probe: `scripts/validate_s0_structured.py`
- Configuration: NONE
- Documentation: `docs/v0.61_S0_fix_structured.md`

## Git Diff Summary

At the stop point: one tracked source file modified and one untracked probe file added (plus this documentation file after the captured status).

## Structured Semantic Checklist

- STRUCT-01 PASS
- STRUCT-02 PASS
- STRUCT-03 PASS
- STRUCT-04 PASS
- STRUCT-05 PASS
- STRUCT-06 PASS
- STRUCT-07 PASS
- STRUCT-08 PASS
- STRUCT-09 PASS
- STRUCT-10 REPAIRED, VERIFICATION INCOMPLETE
- STRUCT-11 REPAIRED, VERIFICATION INCOMPLETE
- STRUCT-12 PASS
- STRUCT-13 PASS
- STRUCT-14 PASS
- STRUCT-15 PASS by static path audit
- STRUCT-16 PASS by static path audit
- STRUCT-17 PASS by static path audit
- STRUCT-18 PASS by static configuration/path audit
- STRUCT-19 FAIL / UNRESOLVED (probe setup failure before scheduling)

## Final S0 Structured Gate

`S0 STRUCTURED: FAIL — USER REVIEW REQUIRED`

No overall PASS is declared because event scheduling verification and the requested exact v0.60 comparison remain unresolved.

## Commands Executed

Commands were run from the active project or discovery workspace as applicable:

1. Read the supplied protocol with `sed`; listed workspace files and searched for `AGENTS.md`.
2. Read the remaining protocol; listed v0.61 files and checked for `AGENTS.md`.
3. Inspected `cluster.py`, strategy base, `run_one.py`, and git status.
4. Audited fanout/sample/select call sites with `rg`; inspected simulator, AHBN strategy, topology, cluster manager, and batch runner.
5. Inspected simulator dispatch, Exp07/08/09 runner/config paths, and attempted filesystem v0.60 diffs.
6. Inspected imports, send path, complete Exp08/09 runner paths, candidate historical directories, and git history.
7. Patched simulator sender dispatch.
8. Inspected node/message receive APIs and historical git objects.
9. Inspected receive logic and v0.61 baseline Structured implementation.
10. Audited repository history/tree paths for v0.60/v0.6.
11. Added `scripts/validate_s0_structured.py`.
12. Ran the probe as a file (import-path failure).
13. Ran the probe as a module (target counts passed; scheduling setup failed).
14. Captured git diff and status.

## Terminal Output

### Requested historical directory

```text
find: /Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60: No such file or directory
diff: /Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60/ahbn/strategies/cluster.py: No such file or directory
```

### First probe invocation

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python scripts/validate_s0_structured.py
Traceback (most recent call last):
  File ".../scripts/validate_s0_structured.py", line 3, in <module>
    from ahbn.cluster import ClusterManager
ModuleNotFoundError: No module named 'ahbn'
```

### Module-form probe invocation

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python -m scripts.validate_s0_structured
S0 Structured deterministic target-count probes
eligible=1 selected=1 targets=[2] PASS
eligible=2 selected=2 targets=[2, 3] PASS
eligible=3 selected=3 targets=[2, 3, 4] PASS
eligible=4 selected=4 targets=[2, 3, 4, 5] PASS
eligible=5 selected=5 targets=[2, 3, 4, 5, 6] PASS
eligible=6 selected=6 targets=[2, 3, 4, 5, 6, 7] PASS
eligible=7 selected=7 targets=[2, 3, 4, 5, 6, 7, 8] PASS
Traceback (most recent call last):
  ...
  File ".../ahbn/metrics.py", line 44, in record_first_seen
    rec = self.messages[message_id]
KeyError: 'structured-probe'
```

### Source diff at stop point

```diff
+from ahbn.strategies.cluster import ClusterStrategy

+        elif isinstance(self.strategy, ClusterStrategy):
+            targets = self.strategy.select_targets(
+                node,
+                message,
+                self,
+                exclude_target_id=src_id,
+            )
```

## Follow-up — STRUCT-19 and CH Verification

### Scope and preserved history

This section resumes the prior stopped audit. The earlier `KeyError: 'structured-probe'`, unresolved checklist state, and failure gate above are retained as historical evidence. No Exp07, Exp08, or Exp09 campaign was run.

### Missing message-lifecycle step

Inspection of `Simulator.inject_message()` and `MetricsCollector` confirmed the cause of the earlier probe failure. A normal message lifecycle is:

1. `Simulator.inject_message()` constructs `Message`.
2. `MetricsCollector.register_message(message_id, source_id, created_at)` creates the metrics record.
3. `inject_message()` schedules the source's initial `receive` event.
4. `Simulator.run()` dispatches the event to `handle_receive()`.
5. `handle_receive()` marks first-seen state, calls `record_first_seen()`, selects targets, and invokes `send_message()` once per deduplicated target.
6. Each `send_message()` schedules one destination `receive` event.

The synthetic probe began deliberately at a subsequent `0 -> 1` receive but omitted step 2. The probe now calls the same public `metrics.register_message()` API before `handle_receive()`. Production metrics code was not changed.

### STRUCT-19 scheduling result

The actual `Simulator.handle_receive()` path was exercised with sender 0, Structured receiver/head 1, and eligible targets `{2,3,4,5,6,7,8}`.

```text
selected targets:       [2, 3, 4, 5, 6, 7, 8]
scheduled destinations: [2, 3, 4, 5, 6, 7, 8]
selected count:          7
scheduled count:         7
sender 0 selected:       NO
sender 0 scheduled:      NO
physical-only 100/101:   NOT SELECTED OR SCHEDULED
result:                  PASS
```

`Simulator.handle_receive()` deduplicates but does not truncate the strategy output. It then calls `send_message()` once for every target, and each call places one receive event on the queue.

### Production sender-exclusion patch review

1. Before repair, standalone Structured reached the generic comparator branch and received no sender argument: confirmed.
2. `ClusterStrategy` already had the correct optional `exclude_target_id` behavior; passing `src_id` is required to activate it: confirmed.
3. The branch passes the full returned target list into the unchanged deduplication/scheduling loop: seven-of-seven probe PASS.
4. `isinstance(..., ClusterStrategy)` limits this new dispatch behavior to standalone Structured. AHBN and Gossip retain their preceding branches; DC-SoC retains the generic branch.
5. The base strategy interface does not define a common sender-exclusion keyword, so replacing this with a generic call would require a wider refactor. The existing branch is the minimum repair and is retained.

### Exp08 actual Structured CH verification

The active Exp08 construction path uses BA with `m=3`, 100 nodes, seed 42, four static clusters, `resource_aware_heads=False`, and `ClusterManager.head_selection="lowest_id"`. Round-robin membership yields heads 0, 1, 2, and 3. The simulator's bottleneck rule is not a single random target: `send_message()` adds the configured extra delay whenever the destination's current `is_cluster_head` flag is true. Therefore all and only active CH destinations receive CH bottleneck delay.

| Seed | Factor | CHs | Members per cluster | CH physical degrees | Runtime bottleneck targets | Max CH structural targets | Result |
|---:|---:|---|---|---|---|---:|---|
| 42 | 1.0 | 0,1,2,3 | 25,25,25,25 | 30,11,14,15 | 0,1,2,3 | 26 | PASS |
| 42 | 3.0 | 0,1,2,3 | 25,25,25,25 | 30,11,14,15 | 0,1,2,3 | 26 | PASS |

Factor 1.0 adds zero extra delay by definition; factor 3.0 adds CH delay. In both conditions the code predicate targets the current Structured CH set. No normal member, arbitrary high-degree node, stale ID, or DC-SoC role is consulted. Repeated construction at fixed seed produced identical assignments.

### Exp09 actual Structured CH verification

The follow-up request describes BA `m` conditions, but the checked-in `configs/exp09_dense_topology.yaml` and `run_batch.exp09()` define an ER `edge_probs` sweep: `0.04, 0.06, 0.08, 0.10, 0.12`. Verification therefore used the actual low/high configured probabilities, not invented BA conditions.

| Edge probability | Seed | CHs | Members per cluster | CH physical degrees | Max CH structural targets | Result |
|---:|---:|---|---|---|---:|---|
| 0.04 | 42 | 0,1,2,3 | 25,25,25,24 | 6,6,6,3 | 26 | PASS |
| 0.12 | 42 | 0,1,2,3 | 25,25,25,25 | 14,13,14,11 | 26 | PASS |
| 0.12 | 42 repeated | 0,1,2,3 | 25,25,25,25 | 14,13,14,11 | 26 | PASS |
| 0.12 | 43 | 0,1,2,3 | 25,25,25,25 | 11,12,10,15 | 26 | PASS |

The low-density seeded graph contains 99 retained nodes, hence the final cluster has 24 members. This comes from the active topology returned by the topology builder, not stale cluster state.

CH IDs remain 0–3 across these cases because current Structured selection is deterministic lowest-ID selection within round-robin clusters; physical degree does not select the head when `resource_aware_heads=False`. Density and seed change the physical topology and CH degrees, while cluster construction produces fresh membership and CH state for every case. For every cluster, a member's real `ClusterStrategy.select_targets()` result matched the manager-recorded CH, and every head's selected set exactly matched its members plus gateway heads. The maximum 26 obligations were not truncated.

### Historical evidence follow-up

Exact filesystem v0.60 comparison remains unavailable because `/Users/wwiras/Documents/src/AHBNProj/ahbn/v0.60` is absent. Reasonable repository evidence was inspected at commit `301ca44` under the historical `v0.6/` tree. Its standalone `ClusterStrategy(fanout=None)` also returned all members plus gateways, while its generic simulator dispatch did not pass the sender. Classification:

- Uncapped standalone target selection: BEHAVIOURALLY EQUIVALENT.
- Historical optional AHBN budget: AHBN-ONLY / UNRELATED to standalone Structured.
- Missing sender exclusion in the historical generic dispatch: LEGACY DEFECT repaired in current v0.61.

Exact filesystem v0.60 comparison unavailable. Current v0.61 semantics were verified directly through runtime behavior and repository history available locally.

### Follow-up commands executed

15. Read the entire follow-up request in three `sed` commands.
16. Inspected `metrics.py`, message injection, the existing probe/documentation, Exp08/Exp09 configs and runner paths, and CH/bottleneck references.
17. Updated `scripts/validate_s0_structured.py` to register its synthetic message and add representative CH checks.
18. Attempted `python -m py_compile`; it was blocked from writing `scripts/__pycache__` by the managed filesystem (`Operation not permitted`). No project-code failure occurred.
19. Ran the complete probe with the required interpreter and `-B` to disable bytecode writes.
20. Inspected historical `v0.6` Structured strategy/simulator code from git commit `301ca44`, then ran `git diff --check`, `git diff --stat`, and `git status --short`.

### Follow-up terminal output

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python -m py_compile scripts/validate_s0_structured.py
[Errno 1] Operation not permitted: 'scripts/__pycache__'
```

This was an environment bytecode-write restriction. The same code was then executed with `-B`:

```text
$ /Users/wwiras/Documents/src/AHBNProj/venv0.6/bin/python -B -m scripts.validate_s0_structured
S0 Structured deterministic target-count probes
eligible=1 selected=1 targets=[2] PASS
eligible=2 selected=2 targets=[2, 3] PASS
eligible=3 selected=3 targets=[2, 3, 4] PASS
eligible=4 selected=4 targets=[2, 3, 4, 5] PASS
eligible=5 selected=5 targets=[2, 3, 4, 5, 6] PASS
eligible=6 selected=6 targets=[2, 3, 4, 5, 6, 7] PASS
eligible=7 selected=7 targets=[2, 3, 4, 5, 6, 7, 8] PASS
event scheduling targets=[2, 3, 4, 5, 6, 7, 8] PASS
sender exclusion=PASS physical-neighbor isolation=PASS
Exp08 Structured CH verification
seed=42 factor=1.0 CHs=[0, 1, 2, 3] members=[25, 25, 25, 25] degrees=[30, 11, 14, 15] bottleneck_targets=[0, 1, 2, 3] MATCH=PASS max_CH_targets=26
seed=42 factor=3.0 CHs=[0, 1, 2, 3] members=[25, 25, 25, 25] degrees=[30, 11, 14, 15] bottleneck_targets=[0, 1, 2, 3] MATCH=PASS max_CH_targets=26
Exp09 Structured CH / ER density verification
edge_prob=0.04 seed=42 CHs=[0, 1, 2, 3] members=[25, 25, 25, 24] degrees=[6, 6, 6, 3] max_CH_targets=26 PASS
edge_prob=0.12 seed=42 CHs=[0, 1, 2, 3] members=[25, 25, 25, 25] degrees=[14, 13, 14, 11] max_CH_targets=26 PASS
edge_prob=0.12 seed=42 CHs=[0, 1, 2, 3] members=[25, 25, 25, 25] degrees=[14, 13, 14, 11] max_CH_targets=26 PASS
edge_prob=0.12 seed=43 CHs=[0, 1, 2, 3] members=[25, 25, 25, 25] degrees=[11, 12, 10, 15] max_CH_targets=26 PASS
============================================================
S0 — STRUCTURED FOLLOW-UP VERIFICATION
============================================================
STRUCT-19
  Selected targets:                       7
  Scheduled targets:                      7
  Selected == scheduled:                  PASS
  Sender excluded through scheduling:     PASS
EXP08 CH
  CH assignment identified:               PASS
  Bottleneck target == intended CH:       PASS (all CH destinations)
  Fixed-seed reproducibility:             PASS
EXP09 CH / DENSITY
  CH assignment identified:               PASS
  Active topology used:                   PASS (configured ER probabilities)
  Same seed reproduces CH:                PASS
  Strategy uses active CH state:          PASS
FANOUT
  CH structural targets truncated:        NO
Historical v0.60 exact filesystem diff:
  UNAVAILABLE (requested directory is absent)
Source repairs performed:
  YES (prior sender-exclusion dispatch repair only)
Files modified:
  ahbn/simulator.py
  scripts/validate_s0_structured.py
  docs/v0.61_S0_fix_structured.md
Documentation:
  docs/v0.61_S0_fix_structured.md
Verification cases: Exp08=2 Exp09=4
FINAL:
  S0 STRUCTURED REPAIRED → PASS
============================================================
```

### Updated Structured Semantic Checklist

- STRUCT-01 PASS
- STRUCT-02 PASS
- STRUCT-03 PASS
- STRUCT-04 PASS
- STRUCT-05 PASS
- STRUCT-06 PASS
- STRUCT-07 PASS
- STRUCT-08 PASS
- STRUCT-09 PASS
- STRUCT-10 REPAIRED → PASS
- STRUCT-11 REPAIRED → PASS
- STRUCT-12 PASS
- STRUCT-13 PASS
- STRUCT-14 PASS
- STRUCT-15 PASS
- STRUCT-16 PASS
- STRUCT-17 PASS
- STRUCT-18 PASS
- STRUCT-19 REPAIRED → PASS
- STRUCT-20 PASS
- STRUCT-21 PASS
- STRUCT-22 PASS
- STRUCT-23 PASS
- STRUCT-24 PASS
- STRUCT-25 PASS
- STRUCT-26 PASS
- STRUCT-27 PASS

### Final follow-up gate

`S0 STRUCTURED: REPAIRED → PASS`

Stop here. S1 and final Exp07–Exp09 campaigns were not started.
